--- a/advice-generator/public/index.html
+++ b/advice-generator/public/index.html
@@ -28,7 +28,7 @@
       src="https://kit.fontawesome.com/799b5625cb.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Advice Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
